--- a/aula 06/index 2.html
+++ b/aula 06/index 2.html
@@ -6,6 +6,8 @@
     <title>Atividade "Aula 06"</title>
 </head>
 <body>
+    <h1>ATIVIDADE AULA 06</h1>
+    
     <p>Esta frase está em <b>negrito</b> utilizando &lt;b&gt;.<br>
     já esta, <strong>destaque</strong> utilizando &lt;strong&gt;.</p> <br>
 
@@ -28,5 +30,24 @@
     <p>Esta frase tem <sup>um texto subscrito</sup>.</p> <br>
 
     <p>Esta frase tem <code>um trecho de código</code>. </p>
+
+    <p>Aqui estarei fazendo uma citação simples uma frase:
+        Segundo Steve Jobs <q>A tecnologia move o mundo</q></p> <br>
+
+    <p>Aqui estarei fazendo uma citação completa de um livro:
+        
+        No capítulo 1 de "A Arte da Guerra", de Sun Tzu, ele diz:
+        <blockquote cite= https://www.sogipa.com.br/web/imgs/arquivos/a-arte-da-guerra5e8e0e84.pdf>
+            A guerra é um dos assuntos mais importantes do Estado. É o campo onde, a vida
+            e a morte são determinadas. É o caminho da sobrevivência ou da desgraça de um
+            Estado. Assim, o Estado deve examinar com muita atenção este assunto antes de
+            buscar a guerra.
+        </blockquote>
+    </p> <br>
+
+    <p>Nesta frase abreviarei o HiperText Markup Language <br>
+        Estou estudando <abbr title="HiperText Markup Language"></abbr>.
+    </p>
+
 </body>
 </html>
