--- a/Aula 3/index.html
+++ b/Aula 3/index.html
@@ -10,5 +10,8 @@
     
     <h1>EU TENTEEI</h1>
 
+    <p><img src="chico-moedas-aquariano-nato.gif" alt=""></p><br>
+    <p><img src="ab67616d00001e020843541162c21417b560c5c6.jpg" alt=""></p><br>
+
 </body>
 </html>
